--- a/styles.css
+++ b/styles.css
@@ -1924,9 +1924,8 @@ input[type=date]{
   top: 0;
   left: 0;
   width: 100%;
-  height: 100%;
+  height: 100vh;
   background-color: rgba(0,0,0,0.5);
-  display: flex;
   justify-content: center;
   align-items: center;
   font-family: inherit;
